bridging/LabSoundHelper.h

int AnalyserNode_minDecibels(int nodeIndex);
void AnalyserNode_setMaxDecibels(int nodeIndex, double k);
int AnalyserNode_maxDecibels(int nodeIndex);
void AnalyserNode_setSmoothingTimeConstant(int nodeIndex, double k);
int AnalyserNode_smoothingTimeConstant(int nodeIndex);
AnalyserNode_getFloatFrequencyData(int nodeIndex, float* array);