bridging/struct.h

struct FloatArray
{
	float* array;
	int len;
};
struct IntArray
{
	int* array;
	int len;
};