lib/generated_bindings.dart


  late final _AnalyserNode_minDecibels_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_minDecibels>>(
          'AnalyserNode_minDecibels');
  late final _dart_AnalyserNode_minDecibels _AnalyserNode_minDecibels =
      _AnalyserNode_minDecibels_ptr.asFunction<
          _dart_AnalyserNode_minDecibels>();

  void AnalyserNode_setMaxDecibels(
    int nodeIndex,
    double k,
  ) {
    return _AnalyserNode_setMaxDecibels(
      nodeIndex,
      k,
    );
  }

  late final _AnalyserNode_setMaxDecibels_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_setMaxDecibels>>(
          'AnalyserNode_setMaxDecibels');
  late final _dart_AnalyserNode_setMaxDecibels _AnalyserNode_setMaxDecibels =
      _AnalyserNode_setMaxDecibels_ptr.asFunction<
          _dart_AnalyserNode_setMaxDecibels>();

  int AnalyserNode_maxDecibels(
    int nodeIndex,
  ) {
    return _AnalyserNode_maxDecibels(
      nodeIndex,
    );
  }

  late final _AnalyserNode_maxDecibels_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_maxDecibels>>(
          'AnalyserNode_maxDecibels');
  late final _dart_AnalyserNode_maxDecibels _AnalyserNode_maxDecibels =
      _AnalyserNode_maxDecibels_ptr.asFunction<
          _dart_AnalyserNode_maxDecibels>();

  void AnalyserNode_setSmoothingTimeConstant(
    int nodeIndex,
    double k,
  ) {
    return _AnalyserNode_setSmoothingTimeConstant(
      nodeIndex,
      k,
    );
  }

  late final _AnalyserNode_setSmoothingTimeConstant_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_setSmoothingTimeConstant>>(
          'AnalyserNode_setSmoothingTimeConstant');
  late final _dart_AnalyserNode_setSmoothingTimeConstant
      _AnalyserNode_setSmoothingTimeConstant =
      _AnalyserNode_setSmoothingTimeConstant_ptr.asFunction<
          _dart_AnalyserNode_setSmoothingTimeConstant>();

  int AnalyserNode_smoothingTimeConstant(
    int nodeIndex,
  ) {
    return _AnalyserNode_smoothingTimeConstant(
      nodeIndex,
    );
  }

  late final _AnalyserNode_smoothingTimeConstant_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_smoothingTimeConstant>>(
          'AnalyserNode_smoothingTimeConstant');
  late final _dart_AnalyserNode_smoothingTimeConstant
      _AnalyserNode_smoothingTimeConstant =
      _AnalyserNode_smoothingTimeConstant_ptr.asFunction<
          _dart_AnalyserNode_smoothingTimeConstant>();

  int AnalyserNode_getFloatFrequencyData(
    int nodeIndex,
    ffi.Pointer<ffi.Float> array,
  ) {
    return _AnalyserNode_getFloatFrequencyData(
      nodeIndex,
      array,
    );
  }

  late final _AnalyserNode_getFloatFrequencyData_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_getFloatFrequencyData>>(
          'AnalyserNode_getFloatFrequencyData');
  late final _dart_AnalyserNode_getFloatFrequencyData
      _AnalyserNode_getFloatFrequencyData =
      _AnalyserNode_getFloatFrequencyData_ptr.asFunction<
          _dart_AnalyserNode_getFloatFrequencyData>();
}

class FloatArray extends ffi.Struct {
  external ffi.Pointer<ffi.Float> array;

  @ffi.Int32()
  external int len;
}

class IntArray extends ffi.Struct {
  external ffi.Pointer<ffi.Int32> array;

  @ffi.Int32()
  external int len;
}

typedef _c_InitDartApiDL = ffi.Int32 Function(
  ffi.Pointer<ffi.Void> data,
);

typedef _dart_InitDartApiDL = int Function(
  ffi.Pointer<ffi.Void> data,
);

typedef _c_registerDecodeAudioSendPort = ffi.Void Function(
  ffi.Int32 sendPort,
);

typedef _dart_registerDecodeAudioSendPort = void Function(
  int sendPort,
);

typedef _c_createRealtimeAudioContext = ffi.Pointer<ffi.Int32> Function(
  ffi.Int32 channels,
  ffi.Float sampleRate,
);

typedef _dart_createRealtimeAudioContext = ffi.Pointer<ffi.Int32> Function(
  int channels,
  double sampleRate,
);

typedef _c_createOfflineAudioContext = ffi.Pointer<ffi.Int32> Function(
  ffi.Int32 channels,
  ffi.Float sampleRate,
  ffi.Float timeMills,
);

typedef _dart_createOfflineAudioContext = ffi.Pointer<ffi.Int32> Function(
  int channels,
  double sampleRate,
  double timeMills,
);

typedef _c_AudioContext_startOfflineRendering = ffi.Void Function(
  ffi.Pointer<ffi.Int32> context,
  ffi.Int32 recorderIndex,
  ffi.Pointer<ffi.Int8> file_path,
);

typedef _dart_AudioContext_startOfflineRendering = void Function(
  ffi.Pointer<ffi.Int32> context,
  int recorderIndex,
  ffi.Pointer<ffi.Int8> file_path,
);

typedef _c_AudioContext_currentTime = ffi.Double Function(
  ffi.Pointer<ffi.Int32> context,
);

typedef _dart_AudioContext_currentTime = double Function(
  ffi.Pointer<ffi.Int32> context,
);

typedef _c_AudioContext_predictedCurrentTime = ffi.Double Function(
  ffi.Pointer<ffi.Int32> context,
);

typedef _dart_AudioContext_predictedCurrentTime = double Function(
  ffi.Pointer<ffi.Int32> context,
);

typedef _c_AudioContext_sampleRate = ffi.Float Function(
  ffi.Pointer<ffi.Int32> context,
);

typedef _dart_AudioContext_sampleRate = double Function(
  ffi.Pointer<ffi.Int32> context,
);

typedef _c_AudioContext_isInitialized = ffi.Int32 Function(
  ffi.Pointer<ffi.Int32> context,
);

typedef _dart_AudioContext_isInitialized = int Function(
  ffi.Pointer<ffi.Int32> context,
);

typedef _c_AudioContext_isConnected = ffi.Int32 Function(
  ffi.Pointer<ffi.Int32> context,
  ffi.Int32 destinationIndex,
  ffi.Int32 sourceIndex,
);

typedef _dart_AudioContext_isConnected = int Function(
  ffi.Pointer<ffi.Int32> context,
  int destinationIndex,
  int sourceIndex,
);

typedef _c_AudioContext_setDeviceNode = ffi.Void Function(
  ffi.Pointer<ffi.Int32> context,
  ffi.Int32 nodeId,
);

typedef _dart_AudioContext_setDeviceNode = void Function(
  ffi.Pointer<ffi.Int32> context,
  int nodeId,
);

typedef _c_AudioContext_isOfflineContext = ffi.Int32 Function(
  ffi.Pointer<ffi.Int32> context,
);

typedef _dart_AudioContext_isOfflineContext = int Function(
  ffi.Pointer<ffi.Int32> context,
);

typedef _c_AudioContext_currentSampleFrame = ffi.Int32 Function(
  ffi.Pointer<ffi.Int32> context,
);

typedef _dart_AudioContext_currentSampleFrame = int Function(
  ffi.Pointer<ffi.Int32> context,
);

typedef _c_AudioContext_connect = ffi.Void Function(
  ffi.Pointer<ffi.Int32> context,
  ffi.Int32 destination,
  ffi.Int32 source,
);

typedef _dart_AudioContext_connect = void Function(
  ffi.Pointer<ffi.Int32> context,
  int destination,
  int source,
);

typedef _c_AudioContext_disconnect = ffi.Void Function(
  ffi.Pointer<ffi.Int32> context,
  ffi.Int32 destination,
  ffi.Int32 source,
);

typedef _dart_AudioContext_disconnect = void Function(
  ffi.Pointer<ffi.Int32> context,
  int destination,
  int source,
);

typedef _c_AudioContext_resetDevice = ffi.Void Function(
  ffi.Pointer<ffi.Int32> context,
);

typedef _dart_AudioContext_resetDevice = void Function(
  ffi.Pointer<ffi.Int32> context,
);

typedef _c_AudioContext_releaseContext = ffi.Void Function(
  ffi.Pointer<ffi.Int32> ctx,
);

typedef _dart_AudioContext_releaseContext = void Function(
  ffi.Pointer<ffi.Int32> ctx,
);

typedef _c_AudioParam_value = ffi.Float Function(
  ffi.Int32 nodeId,
  ffi.Int32 paramIndex,
);

typedef _dart_AudioParam_value = double Function(
  int nodeId,
  int paramIndex,
);

typedef _c_AudioParam_setValue = ffi.Void Function(
  ffi.Int32 nodeId,
  ffi.Int32 paramIndex,
  ffi.Float value,
);

typedef _dart_AudioParam_setValue = void Function(
  int nodeId,
  int paramIndex,
  double value,
);

typedef _c_AudioParam_setValueCurveAtTime = ffi.Void Function(
  ffi.Int32 nodeId,
  ffi.Int32 paramIndex,
  ffi.Pointer<ffi.Float> curve,
  ffi.Float time,
  ffi.Float duration,
);

typedef _dart_AudioParam_setValueCurveAtTime = void Function(
  int nodeId,
  int paramIndex,
  ffi.Pointer<ffi.Float> curve,
  double time,
  double duration,
);

typedef _c_AudioParam_cancelScheduledValues = ffi.Void Function(
  ffi.Int32 nodeId,
  ffi.Int32 paramIndex,
  ffi.Float startTime,
);

typedef _dart_AudioParam_cancelScheduledValues = void Function(
  int nodeId,
  int paramIndex,
  double startTime,
);

typedef _c_AudioParam_setValueAtTime = ffi.Void Function(
  ffi.Int32 nodeId,
  ffi.Int32 paramIndex,
  ffi.Float value,
  ffi.Float time,
);

typedef _dart_AudioParam_setValueAtTime = void Function(
  int nodeId,
  int paramIndex,
  double value,
  double time,
);

typedef _c_AudioParam_exponentialRampToValueAtTime = ffi.Void Function(
  ffi.Int32 nodeId,
  ffi.Int32 paramIndex,
  ffi.Float value,
  ffi.Float time,
);

typedef _dart_AudioParam_exponentialRampToValueAtTime = void Function(
  int nodeId,
  int paramIndex,
  double value,
  double time,
);

typedef _c_AudioParam_linearRampToValueAtTime = ffi.Void Function(
  ffi.Int32 nodeId,
  ffi.Int32 paramIndex,
  ffi.Float value,
  ffi.Float time,
);

typedef _dart_AudioParam_linearRampToValueAtTime = void Function(
  int nodeId,
  int paramIndex,
  double value,
  double time,
);

typedef _c_AudioParam_setTargetAtTime = ffi.Void Function(
  ffi.Int32 nodeId,
  ffi.Int32 paramIndex,
  ffi.Float target,
  ffi.Float time,
  ffi.Float timeConstant,
);

typedef _dart_AudioParam_setTargetAtTime = void Function(
  int nodeId,
  int paramIndex,
  double target,
  double time,
  double timeConstant,
);

typedef _c_AudioParam_minValue = ffi.Float Function(
  ffi.Int32 nodeId,
  ffi.Int32 paramIndex,
);

typedef _dart_AudioParam_minValue = double Function(
  int nodeId,
  int paramIndex,
);

typedef _c_AudioParam_resetSmoothedValue = ffi.Void Function(
  ffi.Int32 nodeId,
  ffi.Int32 paramIndex,
);

typedef _dart_AudioParam_resetSmoothedValue = void Function(
  int nodeId,
  int paramIndex,
);

typedef _c_AudioParam_setSmoothingConstant = ffi.Void Function(
  ffi.Int32 nodeId,
  ffi.Int32 paramIndex,
  ffi.Double k,
);

typedef _dart_AudioParam_setSmoothingConstant = void Function(
  int nodeId,
  int paramIndex,
  double k,
);

typedef _c_AudioParam_hasSampleAccurateValues = ffi.Int32 Function(
  ffi.Int32 nodeId,
  ffi.Int32 paramIndex,
);

typedef _dart_AudioParam_hasSampleAccurateValues = int Function(
  int nodeId,
  int paramIndex,
);

typedef _c_AudioNode_isScheduledNode = ffi.Int32 Function(
  ffi.Int32 nodeId,
);

typedef _dart_AudioNode_isScheduledNode = int Function(
  int nodeId,
);

typedef _c_AudioNode_numberOfInputs = ffi.Int32 Function(
  ffi.Int32 nodeId,
);

typedef _dart_AudioNode_numberOfInputs = int Function(
  int nodeId,
);

typedef _c_AudioNode_numberOfOutputs = ffi.Int32 Function(
  ffi.Int32 nodeId,
);

typedef _dart_AudioNode_numberOfOutputs = int Function(
  int nodeId,
);

typedef _c_AudioNode_channelCount = ffi.Int32 Function(
  ffi.Int32 nodeId,
);

typedef _dart_AudioNode_channelCount = int Function(
  int nodeId,
);

typedef _c_AudioNode_reset = ffi.Void Function(
  ffi.Int32 nodeId,
  ffi.Pointer<ffi.Int32> context,
);

typedef _dart_AudioNode_reset = void Function(
  int nodeId,
  ffi.Pointer<ffi.Int32> context,
);

typedef _c_releaseNode = ffi.Void Function(
  ffi.Int32 nodeId,
);

typedef _dart_releaseNode = void Function(
  int nodeId,
);

typedef _c_AudioScheduledSourceNode_isPlayingOrScheduled = ffi.Int32 Function(
  ffi.Int32 nodeId,
);

typedef _dart_AudioScheduledSourceNode_isPlayingOrScheduled = int Function(
  int nodeId,
);

typedef _c_AudioScheduledSourceNode_stop = ffi.Void Function(
  ffi.Int32 nodeId,
  ffi.Float when,
);

typedef _dart_AudioScheduledSourceNode_stop = void Function(
  int nodeId,
  double when,
);

typedef _c_AudioScheduledSourceNode_hasFinished = ffi.Int32 Function(
  ffi.Int32 nodeId,
);

typedef _dart_AudioScheduledSourceNode_hasFinished = int Function(
  int nodeId,
);

typedef _c_AudioScheduledSourceNode_startWhen = ffi.Int32 Function(
  ffi.Int32 nodeId,
);

typedef _dart_AudioScheduledSourceNode_startWhen = int Function(
  int nodeId,
);

typedef _c_AudioScheduledSourceNode_start = ffi.Void Function(
  ffi.Int32 nodeId,
  ffi.Float when,
);

typedef _dart_AudioScheduledSourceNode_start = void Function(
  int nodeId,
  double when,
);

typedef _c_AudioScheduledSourceNode_playbackState = ffi.Int32 Function(
  ffi.Int32 nodeId,
);
